# awesome

./: db.sqlite3  hello.py  pyproject.toml
core/: settings.py  urls.py
posts/: admin.py  forms.py  models.py  test_views.py  tests.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_options_post_artist_post_url.py  0003_tag_post_tags.py  0004_alter_post_url.py  0005_alter_tag_options_tag_order.py  0006_tag_image.py
templates/: base.html
templates/account/: base_manage_password.html
templates/includes/: header.html  sidebar.html
templates/layouts/: a.html  b.html  c.html
templates/posts/: home.html  post.html  post_delete.html  post_page.html
