[project]
name = "awesome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "django-extensions>=3.2.3",
    "psycopg>=3.2.5",
    "requests>=2.32.3",
]
